--- a/standalone/viewEntity.html
+++ b/standalone/viewEntity.html
@@ -5,21 +5,20 @@
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
  <script src="config.js"></script>
- <script src="view.js"></script>
+ <script src="viewEntity.js"></script>
 </head>
 <body>
 <div class="container border">
+	<h1 id="pageheading"> Info for </h1>
 	<div class="row border border-primary m-1">
-		<div class="col w-100" id="classes">
-			<h1> Classes </h1>
-			<div class='row bg-dark text-white'><div class='col-8 font-weight-bold'>URI</div><div class='col-2 font-weight-bold'>Count</div><div class='col-2 font-weight-bold'>Examples link</div></div>
+		<div class="col w-100" id="subject">
+			<h2> As Subject </h1>
 		</div>
 	
     </div>
     <div class="row border border-primary m-1">
-		<div class="col" id="predicates">
-			<h1> Predicates </h1>
-			<div class='row bg-dark text-white'><div class='col-8 font-weight-bold'>URI</div><div class='col-2 font-weight-bold'>Count</div><div class='col-2 font-weight-bold'>Examples link</div></div>
+		<div class="col" id="object">
+			<h2> As Object</h1>
 		</div>
 	</div>
 </div>
