--- a/standalone/viewEntity.html
+++ b/standalone/viewEntity.html
@@ -3,12 +3,12 @@
 <head>
  <meta charset="utf-8"/>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link href="vis.css" rel="stylesheet">
+  <link href="css/vis.css" rel="stylesheet">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- <script src="config.js"></script>
- <script src="viewEntity.js"></script>
+ <script src="js/config.js"></script>
+ <script src="js/viewEntity.js"></script>
  <script src="http://d3js.org/d3.v3.min.js"></script>
- <script src="tripleGraph.js"></script>
+ <script src="js/tripleGraph.js"></script>
 </head>
 <body>
 <div class="container border">
