--- a/standalone/viewStatements.html
+++ b/standalone/viewStatements.html
@@ -4,8 +4,8 @@
  <meta charset="utf-8"/>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- <script src="config.js"></script>
- <script src="viewStatements.js"></script>
+ <script src="js/config.js"></script>
+ <script src="js/viewStatements.js"></script>
 </head>
 <body>
 <div class="container border">
