--- a/standalone/viewEntity.html
+++ b/standalone/viewEntity.html
@@ -5,10 +5,10 @@
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="css/vis.css" rel="stylesheet">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- <script src="js/config.js"></script>
- <script src="js/viewEntity.js"></script>
  <script src="http://d3js.org/d3.v3.min.js"></script>
  <script src="js/tripleGraph.js"></script>
+ <script src="js/config.js"></script>
+ <script src="js/viewEntity.js"></script>
 </head>
 <body>
 <div class="container border">
@@ -26,36 +26,23 @@
 	</div>
 	<input id="sdata" type="hidden"/>
 	<input id="odata" type="hidden"/>
+	
 	 <div id="svg-body" class="panel-body"></div>
 	  <script>
-
-	  	var jsonString = $("#sdata").val();
-	  	var triples = JSON.parse(jsonString);
-	  	
-	  	/*
-	  	triples = $.map(triples, function(val,i) {
-	  		var returnVal = {};
-	  		returnVal["subject"] = shortenDisplayURI(val["subject"]);
-	  		returnVal["predicate"] = shortenDisplayURI(val["predicate"]);
-	  		returnVal["object"] = shortenDisplayURI(val["object"]);
-	  		return returnVal;
-	  	});
-	  	*/
-	  
 		var svg = d3.select("#svg-body").append("svg")
-					.attr("width", 1000)
-					.attr("height", 1000)
+					.attr("width", 800)
+					.attr("height", 500)
 					;
 					
-		var force = d3.layout.force().size([1000, 1000]);
+		var force = d3.layout.force().size([800, 500]);
 		
-		var graph = triplesToGraph(triples);
+		//var graph = triplesToGraph(triples);
 		
-		update();
+		//update();
 		
 	  </script>
-  
-	</div>
+	  <div><input type='button' id='expandgraph' value='Expand Two Levels'></div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
