--- a/standalone/viewEntity.html
+++ b/standalone/viewEntity.html
@@ -24,8 +24,15 @@
 			<h2> As Object</h1>
 		</div>
 	</div>
-	<input id="sdata" type="hidden"/>
-	<input id="odata" type="hidden"/>
+	
+	<div><input type='button' id='expandgraph' value='Expand'></div>
+
+	<div id="expandstatements" class="row border border-primary m-1 d-none">
+		<div class="col" id="object">
+			<h2> Statements from expanding graph </h1>
+		</div>
+	</div>
+
 	
 	 <div id="svg-body" class="panel-body"></div>
 	  <script>
@@ -41,7 +48,6 @@
 		//update();
 		
 	  </script>
-	  <div><input type='button' id='expandgraph' value='Expand Two Levels'></div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
