adding some styling, links for objects

--- a/standalone/viewEntity.html
+++ b/standalone/viewEntity.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container border">
-	<h1 id="pageheading"> Info for </h1>
+	<h1 id="pageheading"> Entity: </h1>
 	<div class="row border border-primary m-1">
 		<div class="col w-100" id="subject">
 			<h2> As Subject </h1>
