--- a/standalone/view.html
+++ b/standalone/view.html
@@ -3,6 +3,7 @@
 <head>
  <meta charset="utf-8"/>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="css/view.css" rel="stylesheet">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
  <script src="js/config.js"></script>
  <script src="js/view.js"></script>
@@ -13,13 +14,19 @@
 		<div class="col w-100" id="classes">
 			<h1> Classes </h1>
 			<div class='row bg-dark text-white'><div class='col-8 font-weight-bold'>URI</div><div class='col-2 font-weight-bold'>Count</div><div class='col-2 font-weight-bold'>Examples link</div></div>
+			<div id="loadingClasses" class="b-1 p-2">
+				<div class="dot-elastic"></div>
+			</div>
 		</div>
-	
+
     </div>
     <div class="row border border-primary m-1">
 		<div class="col" id="predicates">
 			<h1> Predicates </h1>
 			<div class='row bg-dark text-white'><div class='col-8 font-weight-bold'>URI</div><div class='col-2 font-weight-bold'>Count</div><div class='col-2 font-weight-bold'>Examples link</div></div>
+			<div id="loadingPredicates" class="b-1 p-2">
+				<div class="dot-elastic"></div>
+			</div>
 		</div>
 	</div>
 </div>
