updating feeling lucky page

--- a/standalone/feelinglucky.html
+++ b/standalone/feelinglucky.html
@@ -13,7 +13,7 @@
     <div class="row border border-primary m-1">
 		<div class="col" id="statements">
 			<h1> Random statements </h1>
-			<div class='row bg-dark text-white'><div class='col-8 font-weight-bold'>URI</div><div class='col-2 font-weight-bold'>Count</div><div class='col-2 font-weight-bold'>Examples link</div></div>
+			<div class='row bg-dark text-white'><div class='col font-weight-bold'>?s</div><div class='col font-weight-bold'>?p</div><div class='col font-weight-bold'>?o</div></div>
 			<div id="loadingStatements" class="b-1 p-2">
 				<div class="dot-elastic"></div>
 			</div>
